[package]
name = "compiler"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dec = { git = 'https://github.com/RustyYato/dec/', branch = 'main' }
memchr = '2'
phf = { version = "0.8", optional = true, default-features = false, features = ["macros"] }
rowan = '0.12'